[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game/GameScreen.gd" type="Script" id=1]
[ext_resource path="res://Game/Button4.gd" type="Script" id=2]
[ext_resource path="res://Game/Timer.gd" type="Script" id=3]
[ext_resource path="res://Game/Button2.gd" type="Script" id=4]
[ext_resource path="res://Game/Button3.gd" type="Script" id=5]
[ext_resource path="res://Game/Button.gd" type="Script" id=6]
[ext_resource path="res://Game/Countdown.gd" type="Script" id=7]

[node name="GameScreen" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 15
size_flags_vertical = 15

[node name="StreetView" type="TextureRect" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 15
size_flags_vertical = 15
expand = true
stretch_mode = 4

[node name="Options" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = -152.0
margin_right = -25.0
margin_bottom = -25.0

[node name="Panel" type="Panel" parent="Options"]
modulate = Color( 0.235294, 0.223529, 0.223529, 1 )
margin_right = 974.0
margin_bottom = 127.0

[node name="HBoxContainer" type="HBoxContainer" parent="Options/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Options/Panel/HBoxContainer"]
margin_right = 240.0
margin_bottom = 127.0
size_flags_horizontal = 3
text = "Option 1"
script = ExtResource( 6 )

[node name="Button2" type="Button" parent="Options/Panel/HBoxContainer"]
margin_left = 244.0
margin_right = 485.0
margin_bottom = 127.0
size_flags_horizontal = 3
text = "Option 2"
script = ExtResource( 4 )

[node name="Button3" type="Button" parent="Options/Panel/HBoxContainer"]
margin_left = 489.0
margin_right = 729.0
margin_bottom = 127.0
size_flags_horizontal = 3
text = "Option 3"
script = ExtResource( 5 )

[node name="Button4" type="Button" parent="Options/Panel/HBoxContainer"]
margin_left = 733.0
margin_right = 974.0
margin_bottom = 127.0
size_flags_horizontal = 3
text = "Option 4"
script = ExtResource( 2 )

[node name="Countdown" type="Container" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 90.0
margin_bottom = 90.0
script = ExtResource( 7 )
time = 30

[node name="sec" type="RichTextLabel" parent="Countdown"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
fit_content_height = true

[node name="Timer" type="Timer" parent="Countdown"]
process_mode = 0
wait_time = 0.1
script = ExtResource( 3 )

[connection signal="pressed" from="Options/Panel/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Options/Panel/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Options/Panel/HBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Options/Panel/HBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="timer_ended" from="Countdown" to="." method="_on_Countdown_timer_ended"]
[connection signal="timeout" from="Countdown/Timer" to="Countdown" method="_on_Timer_timeout"]
